Enhance Add component with form for product details and image upload

--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -9,3 +9,9 @@
     background-color: #2d12123b;
     border-color: #2d1212;
 }
+
+select, input, textarea{
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline-color: #2d1212;
+}
